<resources>
    <string name="app_name">Speech Booster</string>
    <string name="admob_publisher_id">ca-app-pub-3940256099942544~3347511713</string>
    <string name="admob_interstitial">ca-app-pub-3940256099942544/1033173712</string>
    <string name="admob_video">ca-app-pub-3940256099942544/5224354917</string>
    <string name="about_frogobox">Frogobox Software Industry</string>
    <string name="dummyLong">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam veniam similiquevoluptates odit, ipsum laborum architecto distinctio harum, provident fugiat praesentium ex quod doloreslaudantium aliquid quidem placeat incidunt vitae!</string>
    <string name="dummy">Dummy</string>
    <string name="title_repository_script">Repository</string>
    <string name="title_myscript">My Script</string>
    <string name="title_video">My Video</string>
    <string name="title_about_us">toolbar_about_us</string>
    <string name="title_favorite_script">Favorite</string>
    <string name="title_favorite_category">Category</string>
    <string name="title_category_religion">Agama</string>
    <string name="title_category_health">Kesehatan</string>
    <string name="title_category_education">Pendidikan</string>
    <string name="title_category_general">Umum</string>
    <string name="text_edit">Edit</string>
    <string name="text_delete">Delete</string>
    <string name="text_accept">Accept</string>
    <string name="text_image_fav">Star</string>
    <string name="event_empty_data">No Data</string>
    <string name="event_show_progress">Please Wait</string>
    <string name="button_start_record">Start</string>
    <string name="hint_title">Title</string>
    <string name="hint_description">Description</string>
    <string name="take_photo">Take Photo</string>
    <string name="permission_message">Permisi</string>
    <string name="permission_required">Minta Permisi</string>
    <string name="permission_warning">Bahaya</string>
    <string name="dialog_button_yes">Yes</string>
    <string name="dialog_button_no">No</string>
    <string name="dialog_title_delete">Delete Data</string>
    <string name="dialog_message_delete">Are you sure you want to delete data?</string>
    <string name="record">Record</string>
    <string name="stop">Stop</string>
    <string name="description_info">Info</string>
    <string name="permission_request">This sample needs permission for camera and audio recording.</string>
    <string name="camera_error">This device doesn\'t support Camera2 API.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="intro_message">Intro</string>
    <string name="content_religion_id_0">religion_0</string>
    <string name="content_religion_id_1">religion_1</string>
    <string name="content_religion_id_2">religion_2</string>
    <string name="content_religion_id_3">religion_3</string>
    <string name="content_religion_id_4">religion_4</string>
    <string name="content_religion_id_5">religion_5</string>
    <string name="content_religion_id_6">religion_6</string>
    <string name="content_religion_id_7">religion_7</string>
    <string name="content_religion_id_8">religion_8</string>
    <string name="content_religion_id_9">religion_9</string>
    <string name="content_health_id_0">health_0</string>
    <string name="content_health_id_1">health_1</string>
    <string name="content_health_id_2">health_2</string>
    <string name="content_health_id_3">health_3</string>
    <string name="content_health_id_4">health_4</string>
    <string name="content_health_id_5">health_5</string>
    <string name="content_health_id_6">health_6</string>
    <string name="content_health_id_7">health_7</string>
    <string name="content_health_id_8">health_8</string>
    <string name="content_health_id_9">health_9</string>
    <string name="content_health_id_10">health_10</string>
    <string name="content_health_id_11">health_11</string>
    <string name="content_education_id_0">education_0</string>
    <string name="content_education_id_1">education_1</string>
    <string name="content_education_id_2">education_2</string>
    <string name="content_education_id_3">education_3</string>
    <string name="content_education_id_4">education_4</string>
    <string name="content_education_id_5">education_5</string>
    <string name="content_education_id_6">education_6</string>
    <string name="content_education_id_7">education_7</string>
    <string name="content_education_id_8">education_8</string>
    <string name="content_education_id_9">education_9</string>
    <string name="content_education_id_10">education_10</string>
    <string name="content_education_id_11">education_11</string>
    <string name="content_education_id_12">education_12</string>
    <string name="content_education_id_13">education_13</string>
    <string name="content_education_id_14">education_14</string>
    <string name="content_general_id_0">general_0</string>
    <string name="content_general_id_1">general_1</string>
    <string name="content_general_id_2">general_2</string>
    <string name="content_general_id_3">general_3</string>
    <string name="content_general_id_4">general_4</string>
    <string name="content_general_id_5">general_5</string>
    <string name="content_general_id_6">general_6</string>
    <string name="content_general_id_7">general_7</string>
    <string name="content_general_id_8">general_8</string>
    <string name="content_general_id_9">general_9</string>
    <string name="content_general_id_10">general_10</string>
    <string name="content_general_id_11">general_11</string>
    <string name="content_religion_title_0">Peringatan Tahun Baru Islam</string>
    <string name="content_religion_title_1">Keutamaan Lailatul Qadar</string>
    <string name="content_religion_title_2">Peringatan Hari Isra Mi’raj</string>
    <string name="content_religion_title_3">Bahaya Minuman Keras</string>
    <string name="content_religion_title_4">Memperingati 1 Muharom</string>
    <string name="content_religion_title_5">Memperingati Maulid Nabi Muhammad SAW</string>
    <string name="content_religion_title_6">Hari Raya Haji</string>
    <string name="content_religion_title_7">Memperingati Isro Miraj Nabi Muhammad saw</string>
    <string name="content_religion_title_8">Menyambut Bulan Romadlon</string>
    <string name="content_religion_title_9">Memperingati Nuzulul Quran</string>
    <string name="content_health_title_0">Menjaga Kesehatan Mental</string>
    <string name="content_health_title_1">Menjaga Kesehatan Badan</string>
    <string name="content_health_title_2">Menjaga Pola Kesehatan</string>
    <string name="content_health_title_3">Cara Pola Hidup Sehat</string>
    <string name="content_health_title_4">Bahaya Merokok</string>
    <string name="content_health_title_5">Pentingnya Menjaga Kesehatan</string>
    <string name="content_health_title_6">Menjaga Kesehatan Makanan</string>
    <string name="content_health_title_7">Makanan Siap Saji</string>
    <string name="content_health_title_8">Menjaga Kesehatan Lingkungan</string>
    <string name="content_health_title_9">Menjaga Kesehatan dengan Pola Hidup Sehat</string>
    <string name="content_health_title_10">Pentingnya Menjaga Kesehatan Demi Masa Depan</string>
    <string name="content_health_title_11">Jaga Kesehatan Dengan Olahraga Ringan Dan Menyenangkan</string>
    <string name="content_education_title_0">Pentingnya Pendidikan</string>
    <string name="content_education_title_1">Rendahnnya Minat Belajar Siswa</string>
    <string name="content_education_title_2">Keutamaan Mencari Ilmu</string>
    <string name="content_education_title_3">Bahaya Menyontek</string>
    <string name="content_education_title_4">Manfaat Membaca Buku</string>
    <string name="content_education_title_5">Pendidikan Moral</string>
    <string name="content_education_title_6">Pendidikan Berkarakter</string>
    <string name="content_education_title_7">Pendidikan Nasional</string>
    <string name="content_education_title_8">Inovasi dalam Pendidikan</string>
    <string name="content_education_title_9">Pendidikan Untuk Anak yang Menyandang Cacat</string>
    <string name="content_education_title_10">Pendidikan Narkoba</string>
    <string name="content_education_title_11">Pentingnya Pendidikan Di Era Globalisasi</string>
    <string name="content_education_title_12">Kebersihan Lingkungan Sekolah</string>
    <string name="content_education_title_13">Peringatan Hari Ibu</string>
    <string name="content_education_title_14">Peringatan 17 Agustus</string>
    <string name="content_general_title_1">Pemeberantasan Korupsi</string>
    <string name="content_general_title_2">Handphone</string>
    <string name="content_general_title_3">Memperingati Hari Ibu</string>
    <string name="content_general_title_4">Kegiatan Lingkungan Masyarakat</string>
    <string name="content_general_title_5">Cinta Bahasa Indonesia</string>
    <string name="content_general_title_6">Permasalahan Ekonomi</string>
    <string name="content_general_title_7">Buta Aksara</string>
    <string name="content_general_title_8">Hari Sumpah Pemuda</string>
    <string name="content_general_title_9">Hari Kesaktian Pancasila</string>
    <string name="content_general_title_10">Menggali Wisata Bawah Laut Di Indonesia</string>
    <string name="content_general_title_11">Peringatan Hari Kartini</string>
</resources>